--- a/负载均衡策略1.md
+++ b/负载均衡策略1.md
@@ -1,5 +1,17 @@
 ### 1. 负载均衡策略
 
+
+
+
+
+
+
+
+```mermaid
+graph TB
+	将IPv4按照网段分类-->处理待分配网段1-网段n的IPv4-->检查网段1-网段n的IPv4是否均衡-->检查IPv4地址是否均衡-->检查IPv6地址是否均衡-->检查IP总数是否均衡
+```
+
 #### 1.1 关键结构体
 
 - 在原有的`candidate_node`结构体上添加`ipsegment_list`单链表指针
@@ -30,6 +42,7 @@ struct ipsegment_list{
 
 ```c
 /*
+* 处理待分配的各网段ip
 * 增加入参is_segment，true表示分配ip按照网段均衡策略, 默认false兼容原有接口
 */
 bool find_takeover_node_iptype(struct ipalloc_state *ipalloc_state, struct public_ip_list *ip, bool is_segment = false );
@@ -84,11 +97,18 @@ sequenceDiagram
 	nodeB -->> - nodeA: return
 ```
 
+```mermaid
+graph LR
+	待分配IP-->|网段1|计算各pnn节点的IP属于网段1的IP数量-->|ip arry|计算IP数量最少的pnn-->|pnn|IP分配到pnn上
+```
+
+
+
 - `ip`分配主机节点`pnn`后，基于多网段作负载均衡检查。
 
 ```c
 /*
-* 检查已经分配的ip在主机节点间是多网段均衡，不均衡会调整ip在主机节点的分配，直到均衡
+* 检查各网段ip是否均衡，不均衡会调整ip在主机节点的分配，直到均衡
 */
 bool check_multisegment_balance(struct ipalloc_state *ipalloc_state);
 
